<resources>
    <string name="app_name">Haber Akışı</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Haberler</string>
    <string name="nav_header_subtitle">Tüm haberler tek tıkla cebinizde</string>
    <string name="search">Ara</string>
    <string name="search_news">Filtrele\.\.\.</string>
    <string name="search_sources">Kaynak Ara\.\.\.</string>
    <string name="search_columnist">Yazar Ara\.\.\.</string>
    <string name="share_news">Haberi Paylaş</string>
    <string name="share_column">Yazıyı Paylaş</string>
    <string name="save_news">Haberi Kaydet</string>
    <string name="save_column">Yazıyı Kaydet</string>
    <string name="open_in_browser">Tarayıcıda Aç</string>
    <string name="unsave_news_column">Favorilerden Çıkar</string>
    <string name="refresh">Yenile</string>
    <string name="navigate_back">Önceki</string>
    <string name="navigate_forward">Sonraki</string>
    <string name="okay">Tamam</string>
    <string name="try_again">Tekrar Dene</string>
    <string name="share_app">Uygulamayı Paylaş</string>
    <string name="news_view_type">Haber Görünümü</string>
    <string name="app_full_name">Haber Akışı: Haberler ve Köşe Yazıları</string>
    <string name="send_comment_app">Sorun/Öneri Bildir</string>
    <string name="evaluate_app">Uygulamaya Puan Ver</string>
    <string name="about_news_app">Haber Akışı Uygulaması Hakkında</string>
    <string name="version_number">Guncel Versiyon</string>
    <string name="last_minute_notifications_topic">Son_Dakika</string>
    <string name="general_notifications_topic">Genel_Bildirimler</string>
    <string name="last_minute_channel_id">haber_bildirimleri</string>
    <string name="last_minute_channel_name">Haber Bildirimleri</string>
    <string name="edit_source">Kaynakları Düzenle</string>
    <string name="edit_columnists">Yazar Seç</string>
    <string name="edit_categories">Kategorileri Düzenle</string>
    <string name="apply_changes">Değişiklikleri Uygula</string>
    <string name="bana_ozel">Bana Özel</string>
    <string name="haber_ozeti">Haber Özeti</string>
    <string name="haber_resmi">Haberin Resmi</string>
    <string name="yazar_resmi">Yazarın Resmi</string>
    <string name="haber_zamanı">Haberin Tarihi</string>
    <string name="kayitli_haberler">Kayıtlı Haberler</string>
    <string name="kayitli_kose_yazilari">Kayıtlı Köşe Yazıları</string>
    <string name="kaynaklarim">Kaynaklarım</string>
    <string name="gundem_normal">Gündem</string>
    <string name="spor_normal">Spor</string>
    <string name="ekonomi_normal">Ekonomi</string>
    <string name="magazin_normal">Magazin</string>
    <string name="kultursanat_normal">Kültür Sanat</string>
    <string name="saglik_normal">Sağlık</string>
    <string name="teknoloji_normal">Teknoloji</string>
    <string name="manset_normal">Manşetler</string>
    <string name="habersiteleri_normal">Haber Siteleri</string>
    <string name="manset_allcaps">MANŞETLER</string>
    <string name="koseyazilari_normal">Köşe Yazıları</string>
    <string name="koseyazarlari_normal">Köşe Yazarları</string>
    <string name="gundem_ekonomi_normal">Gündem / Ekonomi</string>
    <string name="bildirim_normal">Bildirim</string>
    <string name="diger">Diğer</string>
    <string name="website_categories">Haber Kategorileri</string>
    <string name="gazete_websiteleri">Gazeteler</string>
    <string name="intmedyasi_websiteleri">İnternet Medyası</string>
    <string name="biltek_websiteleri">Bilim Teknoloji</string>
    <string name="spor_websiteleri">Spor</string>
    <string name="ekonomi_websiteleri">Ekonomi</string>
    <string name="magazin_websiteleri">Magazin</string>
    <string name="yabancibasin_websiteleri">Yabancı Basın</string>
    <string name="yerel_websiteleri">Yerel</string>
    <string name="kultursanat_websiteleri">Kültür Sanat</string>
    <string name="saglik_websiteleri">Sağlık</string>
    <string name="gundem_key">gundem</string>
    <string name="ekonomi_key">ekonomi</string>
    <string name="spor_key">spor</string>
    <string name="magazin_key">magazin</string>
    <string name="saglik_key">saglik</string>
    <string name="kultursanat_key">kultursanat</string>
    <string name="teknoloji_key">teknoloji</string>
    <string name="yazarlar_key">yazarlar</string>
    <string name="manset_key">mansetler</string>
    <string name="habersiteleri_key">haber_siteleri</string>
    <string name="tum_kaynaklar_key">tum_kaynaklar</string>
    <string name="bildirim_key">bildirim</string>
    <string name="news_category_key">Category Key</string>
    <string name="news_category_name">Category Name</string>
    <string name="news_source_for_display">Source For Display</string>
    <string name="news_source_for_query">Source For Query</string>
    <string name="news_source_key">Source Key</string>
    <string name="news_title">Title</string>
    <string name="news_url">News Url</string>
    <string name="news_image_url">Image Url</string>
    <string name="news_logo_url">Logo Url</string>
    <string name="news_summary">Summary</string>
    <string name="news_detail">Detail</string>
    <string name="news_time">Time</string>
    <string name="news_item">News Item</string>
    <string name="extra_news">Extra News</string>
    <string name="column_item">Column Item</string>
    <string name="source_list">Source List</string>
    <string name="columnists_list">Columnists List</string>
    <string name="columnist_source">Columnist Source</string>
    <string name="headline_list">Headline List</string>
    <string name="headline_position">Headline Position</string>
    <string name="first_select_source">Öncelikle Haber \nKaynaklarınızı Seçiniz</string>
    <string name="first_select_columnist">Öncelikle Köşe \nYazarlarınızı Seçiniz</string>
    <string name="first_select_website">Öncelikle Haber \nSitelerini Seçiniz</string>
    <string name="check_network_connection">İnternet Bağlantınızı Kontrol Ediniz</string>
    <string name="close_mobiledata_saver">Öncelikle Mobil Veri \nTasarrufunu Kapatınız</string>
    <string name="view_source">Haberin Devamı İçin Tıklayınız</string>
    <string name="news_added_to_favorite">Haber Favorilere Eklendi</string>
    <string name="news_deleted_from_favorite">Haber Favorilerden Çıkarıldı</string>
    <string name="column_added_to_favorite">Köşe Yazısı Favorilere Eklendi</string>
    <string name="column_deleted_from_favorite">Köşe Yazısı Favorilerden Çıkarıldı</string>
    <string name="empty_fav_news_database">Kayıtlı Haberiniz\nBulunmamaktadır.</string>
    <string name="empty_fav_columns_database">Kayıtlı Köşe Yazınız\nBulunmamaktadır.</string>
    <string name="added_to_favorite">Favorilere Eklendi</string>
    <string name="deleted_from_favorite">Favorilerden Çıkarıldı</string>
    <string name="tumu_path">cumle</string>
    <string name="kaynak_path">menba</string>
    <string name="manset_path">gazetemanset</string>
    <string name="yazilar_path">koseyazisi</string>
    <string name="gundem_path">gundemhaber</string>
    <string name="clicked_news_key">CLICKED NEWS</string>
    <string name="clicked_columns_key">CLICKED COLUMNS</string>
    <string name="notified_news_key">NOTIFIED NEWS</string>
    <string name="saved_news_key">SAVED NEWS</string>
    <string name="cached_news_key">CACHED NEWS</string>
    <string name="saved_columns_key">SAVED COLUMNS</string>
    <string name="source_prefs_key">MY SOURCES</string>
    <string name="columnist_prefs_key">MY COLUMNISTS</string>
    <string name="favorite_news_key">MY FAVORITE NEWS</string>
    <string name="notification_prefs_key">NOTIFICATION SOURCES</string>
    <string name="all_sources_key">ALL SOURCES</string>
    <string name="custom_keys">CUSTOM KEYS</string>
    <string name="news_click_counter">Click Counter</string>
    <string name="tops_last_fetch_time">Gundem Son Kaydedilen Zaman</string>
    <string name="ekonomi_last_fetch_time">Ekonomi Son Kaydedilen Zaman</string>
    <string name="sport_last_fetch_time">Spor Son Kaydedilen Zaman</string>
    <string name="techno_last_fetch_time">Teknoloji Son Kaydedilen Zaman</string>
    <string name="magazine_last_fetch_time">Magazin Son Kaydedilen Zaman</string>
    <string name="health_last_fetch_time">Sağlık Son Kaydedilen Zaman</string>
    <string name="art_last_fetch_time">Kultur Sanat Son Kaydedilen Zaman</string>
    <string name="category_preferences">Kategorilerim</string>
    <string name="is_intro_displayed">Is Intro Displayed</string>
    <string name="is_category_dialog_seen">Kategori Bilgilendirmesi Görüldü</string>
    <string name="subscribed_to_general_notifications">Genel Bildirimlere Abone Olundu</string>
    <string name="subscribed_to_lastminute_notifications">Haber Bildirimlerine Abone Olundu</string>
    <string name="last_notified_time">Son Bildirim Zamani</string>
    <string name="news_item_view_preference">Haber Gosterim Secenegi</string>
    <string name="interstitial_trial_counter">Interstitial Trial Counter</string>
    <string name="banner_trial_counter">Banner Trial Counter</string>
    <string name="title_activity_settings">Ayarlar</string>
    <string name="action_settings">Ayarlar</string>
    <string name="night_mode_title">Gece Modu</string>
    <string name="night_mode_off">Gece Modu Kapalı</string>
    <string name="night_mode_on">Gece Modu Açık</string>
    <string name="night_mode_key">Enable Night Mode</string>
    <string name="show_images_title">Mobil Veri Tasarrufu</string>
    <string name="show_images_off">Resimleri her durumda gösterir</string>
    <string name="show_images_on">Resimleri sadece WIFI\'den bağlıyken gösterir</string>
    <string name="show_images_key">Show Images Only On WIFI</string>
    <string name="show_read_mode_title">Köşe Yazıları Okuma Modu</string>
    <string name="show_read_mode_off">Okuma Modu Kapalı (Veri Tasarrufu Maksatlı)</string>
    <string name="show_read_mode_on">Okuma Modu Açık</string>
    <string name="show_read_mode_key">Show Column Read Mode</string>
    <string name="last_minute_notifications_title">Haber Bildirimleri</string>
    <string name="last_minute_notifications_off">Bildirimleri Gizle</string>
    <string name="last_minute_notifications_on">Bildirimleri Göster</string>
    <string name="last_minute_notifications_key">Last Minute Notifications</string>
    <string name="open_notification_settings_key">Notification Settings</string>
    <string name="open_notification_settings_title">Bildirim Ayarları</string>
    <string name="notification_source_selection_key">Notification Source Selection</string>
    <string name="notification_source_selection_title">Bildirim Kaynaklarını Seç</string>
    <string name="edit_categories_summary">Haber Kategorilerinin Yerini Değiştir</string>
    <string name="change_font_size">Haber Yazı Boyutu</string>
    <string name="pref_font_key">fontsize</string>
    <string name="pref_font_label_small">Küçük</string>
    <string name="pref_font_label_medium">Orta</string>
    <string name="pref_font_label_large">Büyük</string>
    <string name="pref_font_label_extra_large">Çok Büyük</string>
    <string name="pref_font_value_small">small</string>
    <string name="pref_font_value_medium">medium</string>
    <string name="pref_font_value_large">large</string>
    <string name="pref_font_value_extra_large">xlarge</string>
    <string name="privacy_policy_title">Gizlilik Sözleşmesi</string>
    <string name="privacy_policy_key">Privacy Policy</string>
    <string name="clear_cache_title">Önbelleği Temizle</string>
    <string name="clear_cache_key">Clear Cache</string>
    <string name="clear_cache_summary">-</string>
    <string name="clear_cache_toast">Resim Önbelleği Temizlendi</string>
    <string name="intro_finish">Bitti</string>
    <string name="intro_guide">Kullanım Klavuzu</string>
</resources>