<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haberinadresi.androidapp.activities.MySourcesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_sources_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_my_sources_gundem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/gundem_ekonomi_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_my_gundem_sources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_my_sources_spor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/spor_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_my_spor_sources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_my_sources_teknoloji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/teknoloji_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_my_teknoloji_sources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_my_sources_kultursanat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/kultursanat_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_my_kultursanat_sources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_my_sources_saglik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/saglik_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_my_saglik_sources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_my_sources_magazin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/magazin_normal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_my_magazin_sources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>