<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_mansetler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="6dp"
        android:clipToPadding="false"
        style="@style/FontStyle"/>

    <ProgressBar
        android:id="@+id/pb_manset_fragment"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:layout_marginBottom="?attr/actionBarSize"
        style="@style/Widget.AppCompat.ProgressBar"/>

    <LinearLayout
        android:id="@+id/layout_internet_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="?attr/actionBarSize">

        <ImageView
            android:id="@+id/iv_wifi_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_wifi_grey"
            android:layout_marginBottom="8dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/tv_no_internet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/check_network_connection"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_check_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/try_again"
            android:textSize="14sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_mobiledata_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:drawableStart="@mipmap/ic_warning_vertical"
        android:drawablePadding="8dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginBottom="?attr/actionBarSize"
        android:text="@string/close_mobiledata_saver"
        android:textSize="16sp"/>

</FrameLayout>