<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:clipToPadding="false"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/pb_news_loading"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.ProgressBar"/>

    <Button
        android:id="@+id/btn_source_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:drawableStart="@mipmap/ic_warning_vertical"
        android:drawablePadding="8dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/first_select_source"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/layout_internet_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/iv_wifi_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            app:srcCompat = "@drawable/ic_wifi_grey"
            android:layout_marginBottom="8dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/tv_no_internet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/check_network_connection"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_check_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/try_again"
            android:textSize="14sp"/>

    </LinearLayout>

</FrameLayout>